"fixed left alignment"

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -9,6 +9,9 @@ html {
   scroll-behavior: smooth;  /* Smooth scroll behavior */
   scroll-padding-top: 10rem;  /* Set the scroll offset to 80px */
 }
+.division{
+  padding-left: 5px;
+}
 
 .division section {
   padding: 20px 0; /* Adds padding at the top and bottom of each section */
